--- a/presentations/defense/defense-presentation-finished.tex
+++ b/presentations/defense/defense-presentation-finished.tex
@@ -210,8 +210,7 @@ that believe\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} -
 \pause
 {
 \center
-\textbf<4>{\tsc{int}} vs. \textbf<6>{\tsc{ext}}
-
+\textbf<4>{\tsc{int}} vs. \textbf<6>{\tsc{ext}}\\
 \center
 \citep[cf.][]{vogel2001,grosu1994,himmelreich2017,cinqueforthcoming}
 }
@@ -824,11 +823,11 @@ a single cause
 \begin{frame}[t]{Assumptions}
 
 \begin{itemize}
-  \item \onslide<2->{headless relatives are derived from light-headed relatives, headed by a special type of light head}
-  \only<4>{\\
+  \item \onslide<2->{headless relatives are derived from light-headed relatives \citep[cf.][]{citko2004,hanink2018}, headed by a special type of light head}\\
+  \only<4>{
   light head\scsub{ext} [relative pronoun\scsub{int} ... ]\label{ex:light+rel}
   }
-  \onslide<5->{\\
+  \onslide<5->{
   \sout{light head\scsub{ext}} [relative pronoun\scsub{int} ... ]\label{ex:light+rel}
   }
 
@@ -1796,7 +1795,7 @@ two factors influence grammaticality\pause
 \end{itemize}
 \onslide<5->{
 \center
-\begin{adjustbox}{max height=0.2\textheight}
+\begin{adjustbox}{max height=0.25\textheight}
   \begin{forest} boom
     [\tsc{dat}P
         [\tsc{k}3]
@@ -1822,83 +1821,33 @@ two factors influence grammaticality\pause
 
 \begin{multicols}{2}
 
-  \begin{adjustbox}{max width=0.5\textwidth}
+  \begin{adjustbox}{max height=0.25\textheight}
 
   \begin{forest} boom
-    [\tsc{acc}P,baseline
-        [\tsc{k}2]
-        [\tsc{nom}P
-            [\tsc{k}1]
-            [ϕP
-                [\phantom{xxx}, roof]
-            ]
+    [\tsc{k}P,baseline
+        [\tsc{k}]
+        [ϕP
+            [\phantom{xxx}, roof]
         ]
     ]
-    {\draw (.east) node[right]{⇔ \tit{n}}; }
-  \end{forest}
-
-  \begin{forest} boom
-    [\tsc{dat}P,baseline
-        [\tsc{k}3]
-        [\tsc{acc}P
-            [\tsc{k}2]
-            [\tsc{nom}P
-                [\tsc{k}1]
-                [ϕP
-                    [\phantom{xxx}, roof]
-                ]
-            ]
-        ]
-    ]
-    {\draw (.east) node[right]{⇔ \tit{m}}; }
-  \end{forest}
-
-  \begin{forest} boom
-    [\tsc{rel}P,baseline
-        [\phantom{xxx}, roof]
-    ]
-    {\draw (.east) node[right]{⇔ \tit{we}}; }
   \end{forest}
 
   \end{adjustbox}
 
-  \begin{adjustbox}{max width=0.4\textwidth}
+  \begin{adjustbox}{max height=0.25\textheight}
 
   \begin{forest} boom
     [ϕP,baseline
         [\phantom{xxx}, roof]
     ]
-    {\draw (.east) node[right]{⇔ \tit{o}}; }
   \end{forest}
 
-  \begin{forest} boom
-    [\tsc{acc}P,baseline
-        [\tsc{k}2]
-        [\tsc{nom}P
-            [\tsc{k}1]
-        ]
-    ]
-    {\draw (.east) node[right]{⇔ \tit{go}}; }
-  \end{forest}
+\hspace{1em}
 
   \begin{forest} boom
-    [\tsc{dat}P,baseline
-        [\tsc{k}3]
-        [\tsc{acc}P
-            [\tsc{k}2]
-            [\tsc{nom}P
-                [\tsc{k}1]
-            ]
-        ]
+    [\tsc{k}P,baseline
+        [\tsc{k}]
     ]
-    {\draw (.east) node[right]{⇔ \tit{mu}}; }
-  \end{forest}
-
-  \begin{forest} boom
-    [\tsc{rel}P,baseline
-        [\phantom{xxx}, roof]
-    ]
-    {\draw (.east) node[right]{⇔ \tit{k}}; }
   \end{forest}
 
   \end{adjustbox}
