--- a/presentations/fenna-files-presentation/references.bib
+++ b/presentations/fenna-files-presentation/references.bib
@@ -14,7 +14,7 @@
   author = {Van Riemsdijk, Henk},
   editor = {Everaert, Martin and {van Riemsdijk}, Henk},
   year = {2006},
-  pages = {338-382},
+  pages = {338--382},
   doi = {10.1002/9780470996591.ch27}
 }
 
@@ -29,7 +29,7 @@
 @phdthesis{himmelreich2017,
   location = {Leipzig},
   title = {Case Matching Effects in Free Relatives and Parasitic Gaps: {{A}} Study on the Properties of Agree},
-  location = {Universität Leipzig},
+  school = {Universität Leipzig},
   author = {Himmelreich, Anke},
   year = {2017}
 }
@@ -47,7 +47,7 @@
 @book{behaghel1923,
   title={Deutsche Syntax: Eine geschichtliche Darstellung},
   author={Behaghel, Otto},
-  year={1923-1932},
+  year={1923--1932},
   publisher={Winter},
   location={Heidelberg}
 }
@@ -60,14 +60,14 @@
   author = {Vogel, Ralf},
   editor = {Müller, Gereon and Sternefeld, Wolfgang},
   year = {2001},
-  pages = {341-375},
+  pages = {341--375},
   doi = {10.1515/9783110829068.341}
 }
 
 @phdthesis{harbert1978,
   title={Gothic syntax: a relational grammar},
   author={Harbert, Wayne Eugene},
-  location = {University of Illinois},
+  school = {University of Illinois},
   location = {Urbana-Champaign},
   year={1978}
 }
@@ -78,7 +78,7 @@
   journal = {Tocharian and Indo-European Studies},
   author = {Gippert, Jost},
   year = {1987},
-  pages = {22-39}
+  pages = {22--39}
 }
 
 @article{pittner1995,
@@ -89,7 +89,7 @@
   journal = {The linguistic review},
   author = {Pittner, Karin},
   year = {1995},
-  pages = {197-231}
+  pages = {197--231}
 }
 
 @incollection{starke2018,
@@ -100,15 +100,18 @@
   author = {Starke, Michal},
   editor = {Baunaz, Lena and De Clercq, Karen and Haegeman, Liliane and Lander, Eric},
   year = {2018},
-  pages = {239-249},
+  pages = {239--249},
   doi = {10.1093/oso/9780190876746.003.0009}
 }
 
 @book{caha2019,
-  title = {Case competition in Nanosyntax. A study of numeral phrases in Ossetic and Russian.},
+  title = {Case competition in Nanosyntax: A study of numerals in Ossetic and Russian},
   author = {Caha, Pavel},
-  year = {2019}
+  year = {2019},
+  location = {Berlin},
+  publisher = {Language Science Press}
 }
+
 
 @incollection{kiparsky1973,
   title = {``Elsewhere'' in Phonology},
@@ -117,7 +120,7 @@
   author = {Kiparsky, Paul},
   editor = {Anderson, Stephen and Kiparsky, Paul},
   year = {1973},
-  pages = {93-106}
+  pages = {93--106}
 }
 
 @article{starke2009,
@@ -126,7 +129,7 @@
   journal = {Nordlyd},
   author = {Starke, Michal},
   year = {2009},
-  pages = {1-6}
+  pages = {1--6}
 }
 
 @article{keenan1977,
@@ -166,7 +169,7 @@
   journal = {Linguistic Inquiry},
   author = {Bresnan, Joan and Grimshaw, Jane},
   year = {1978},
-  pages = {331-391}
+  pages = {331--391}
 }
 
 @inproceedings{groos1981,
@@ -186,7 +189,7 @@
   journal = {Linguistic Inquiry},
   author = {Citko, Barbara},
   year = {2005},
-  pages = {475-496},
+  pages = {475--496},
   doi = {10.1162/002438905774464331}
 }
 
@@ -194,7 +197,7 @@
   title= {A cross-linguistic approach to the pro-drop parameter},
   author= {Gilligan, Gary Martin},
   year= {1987},
-  location= {University of Southern California},
+  school= {University of Southern California},
   location= {Los Angeles, CA}
 }
 
@@ -206,7 +209,7 @@
   location = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
-  pages = {331-374},
+  pages = {331--374},
   doi={10.2307/413494}
 }
 
@@ -218,7 +221,7 @@
   location = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
-  pages = {585-623},
+  pages = {585--623},
   doi={10.2307/413494}
 }
 
@@ -230,7 +233,7 @@
   author = {Bobaljik, Jonathan},
   editor = {Harbour, Daniel and Adger, David and Béjar, Susana},
   year = {2006},
-  pages = {295-328}
+  pages = {295--328}
 }
 
 @article{zaenen1985,
@@ -260,7 +263,7 @@
 @phdthesis{caha2009,
   location = {Tromsø},
   title = {The Nanosyntax of Case},
-  location = {University of Tromsø},
+  school = {University of Tromsø},
   author = {Caha, Pavel},
   year = {2009}
 }
@@ -297,7 +300,6 @@
   volume={3},
   number={1},
   year={2018},
-  publisher={Ubiquity Press},
   doi={10.5334/gjgl.373}
 }
 
@@ -333,7 +335,7 @@
   journal = {Natural Language and Linguistic Theory},
   author = {Grosu, Alexander},
   year = {2003},
-  pages = {247-331}
+  pages = {247--331}
 }
 
 @incollection{moravcsik2009,
@@ -341,7 +343,7 @@
   author={Moravcsik, Edith A.},
   booktitle={The Oxford handbook of case},
   editor={Andrej Malchukov and Andrew Spencer},
-  pages={231–245},
+  pages={231–-245},
   year={2009},
   adress={Oxford},
   publisher={Oxford University Press},
@@ -365,7 +367,7 @@
   author = {Daskalaki, Evangelia},
   editor = {Friedman, Lauren A.},
   year = {2011},
-  pages = {77-86}
+  pages = {77--86}
 }
 
 @book{bobaljik2012,
@@ -378,13 +380,12 @@
 }
 
 @article{bergsma2019,
-  title={Mismatches in free relatives --- grafting nanosyntactic trees},
+  title={Mismatches in free relatives -- grafting nanosyntactic trees},
   author={Bergsma, Fenna},
   journal={Glossa: a journal of general linguistics},
   volume={4},
   number={1},
   year={2019},
-  publisher={Ubiquity Press},
   doi={10.5334/gjgl.821}
 }
 
@@ -462,7 +463,7 @@
   publisher={Dümmler}
 }
 
-@book{cinqueforthcoming,
+@book{cinque2020,
   location = {Cambridge},
   title = {The Syntax of Relative Clauses: A Unified Double-headed Analysis},
   publisher = {Cambridge University Press},
@@ -580,7 +581,7 @@
   number={1-3},
   pages={197--211},
   year={2015},
-  publisher={Brepols Turnhout}
+  doi={10.1484/j.food.5.111860}
 }
 
 @article{grosu1987,
@@ -591,19 +592,19 @@
   number={1},
   pages={41--58},
   year={1987},
-  publisher={Walter de Gruyter, Berlin/New York}
+  doi={10.1515/tlir.1987.6.1.41}
 }
 
-@inproceedings{citko2013,
+@book{citko2013,
   title={Size matters: Multidominance and DP structure in Polish},
   author={Citko, Barbara},
-  booktitle={Talk at the th Poznan Linguistic Meeting},
+  publisher={Talk at the th Poznan Linguistic Meeting},
   year={2013}
 }
 
 @book{vries1993,
   title={Forms and functions in Kombai, an Awyu language of Irian Jaya},
-  author={Vries, Lourens de},
+  author={De Vries, Lourens},
   year={1993},
   publisher={Dept. of Linguistics, Research School of Pacific Studies, The Australian National University}
 }
@@ -615,7 +616,6 @@
   volume={1},
   number={1},
   year={2016},
-  publisher={Ubiquity Press},
   doi={10.5334/gjgl.174}
 }
 
@@ -627,13 +627,15 @@
   number={1},
   pages={95--126},
   year={2004},
-  publisher={Springer}
+  doi={10.1023/b:nala.0000005564.33961.e0}
 }
 
-@article{schwarz2009,
+@phdthesis{schwarz2009,
   title={Two types of definites in natural language},
   author={Schwarz, Florian},
-  year={2009}
+  year={2009},
+  address={Amherst},
+  school={University of Massachusetts}
 }
 
 @article{spyropoulos2011,
@@ -641,23 +643,29 @@
   author={Spyropoulos, Vassilios},
   journal={Morphology and Its Interfaces},
   volume={178},
-  pages={21},
+  pages={21--56},
   year={2011},
-  publisher={John Benjamins Publishing}
+  doi={10.1075/la.178.05spy}
 }
 
 @book{braune2018,
   title={Althochdeutsche Grammatik I},
   author={Braune, Wilhelm},
   year={2018},
-  publisher={Walter de Gruyter GmbH \& Co KG},
-  doi={10.1515/9783110515114}
+  publisher={Walter de Gruyter},
+  doi={10.1515/9783110515114},
+  locaation={Boston}
 }
 
 @article{fuss2014,
   title={Freie Relativsätze mit d-Pronomen},
   author={Fuß, Eric and Grewendorf, Günther},
-  year={2014}
+  journal={Zeitschrift für Sprachwissenschaft},
+  year={2014},
+  volume={33},
+  number={2},
+  pages={165--214},
+  doi={10.1515/zfs-2014-0007}
 }
 
 @article{hanink2018,
@@ -668,12 +676,14 @@
   number={2},
   pages={247--290},
   year={2018},
-  publisher={Springer}
+  doi={10.1007/s10828-018-9096-6}
 }
 
 @article{fuss2017,
   title={Wh-relatives in German: historical and current developments},
-  author={Fuß, Eric}
+  year={2017},
+  author={Fuß, Eric},
+  journal={Handout, Cambridge}
 }
 
 @article{harley2002,
@@ -681,12 +691,386 @@
   author={Harley, Heidi and Ritter, Elizabeth},
   journal={Language},
   pages={482--526},
+  volume={78},
+  issue={3},
   year={2002},
+  doi={10.1353/lan.2002.0158}
 }
 
 @book{grosu1994,
   title={Three studies in locality and case},
   author={Grosu, Alexander},
   year={2003},
-  publisher={Routledge}
+  publisher={Routledge},
+  location={London/New York},
+  doi={10.4324/9780203427132}
+}
+
+@article{s̆imík2020,
+  title={Free Relatives},
+  author={S̆imík, Radek},
+  journal={The Wiley Blackwell Companion to Semantics},
+  pages={1--38},
+  year={2020},
+  doi={10.1002/9781118788516.sem093}
+}
+
+@book{durrell2016,
+  title={Hammer's German grammar and usage},
+  author={Durrell, Martin},
+  location={London/New York},
+  year={2016},
+  publisher={Routledge},
+  doi={10.4324/9781315722634},
+  edition={6th}
+}
+
+@incollection{cinqueforthcoming,
+  title={Some notes on externalization},
+  author = {Cinque, Guglielmo},
+  year={forthcoming},
+  publisher={Oxford University Press},
+  address = {Oxford},
+  editor={Ángel J. Gallego and Dennis Ott},
+  booktitle={Cartography and Explanatory Adequacy}
+}
+
+@article{lander2018,
+  title={The nanosyntax of spatial deixis},
+  author={Lander, Eric and Haegeman, Liliane},
+  journal={Studia linguistica},
+  volume={72},
+  number={2},
+  pages={362--427},
+  year={2018},
+  doi={10.1111/stul.12061}
+}
+
+@phdthesis{hachem2015,
+  address = {Utrecht},
+  title = {Multifunctionality. {{The Internal}} and {{External Syntax}} of d- and w-{{Items}} in {{German}} and {{Dutch}}},
+  school = {Utrecht University},
+  author = {Hachem, Mirjam},
+  year = {2015}
+}
+
+@article{rooth1992,
+  title = {A Theory of Focus Interpretation},
+  volume = {1},
+  number = {1},
+  journal = {Natural Language Semantics},
+  author = {Rooth, Mats},
+  year = {1992},
+  pages = {76--116},
+  doi = {10.1007/bf02342617}
+}
+
+@phdthesis{rooth1985,
+  address = {Amherst},
+  title = {Association with Focus},
+  school = {University of Massachusets},
+  author = {Rooth, Mats},
+  year = {1985}
+}
+
+@inproceedings{colasanti2019,
+  title={Spatial and discourse deixis and the speech act structure of nominals},
+  author={Colasanti, Valentina and Wiltschko, Martina},
+  booktitle = {Proceedings of the Canadian Association Annual Meeting (CLA)},
+  year={2019}
+}
+
+@book{baker2003,
+  title={Lexical categories: Verbs, nouns and adjectives},
+  author={Baker, Mark Cleland},
+  doi={10.1017/cbo9780511615047},
+  year={2003},
+  publisher={Cambridge University Press},
+  location={Cambridge}
+}
+
+@incollection{cardinaletti1994,
+  title = {The Typology of Structural Deficiency. On the Three Grammatical Classes},
+  booktitle = {Working Papers in Linguistics},
+  publisher = {University of Venice},
+  author = {Cardinaletti, Anna and Starke, Michal},
+  year = {1994},
+  pages = {41--109},
+  volume = {4},
+  number = {2}
+}
+
+@book{swan2002,
+  title={A grammar of contemporary Polish},
+  author={Swan, Oscar E},
+  year={2002},
+  publisher={Slavica},
+  location={Bloomington, IN}
+}
+
+@article{simik2016,
+  title={On the semantics of Czech free relatives},
+  author={Šimík, Radek},
+  year={2016},
+  volume={64},
+  number={1},
+  pages={109--129},
+  journal={Linguistica Brunensia}
+}
+
+@article{caha2021,
+  title={Modeling declensions without declension features. The case of Russian},
+  author={Caha, Pavel},
+  year={2021},
+  doi={10.1556/2062.2021.00433},
+  journal={Acta Linguistica Academica}
+}
+
+@article{de2018,
+  title={Unmerging analytic comparatives},
+  author={De Clercq, Karen and Vanden Wyngaerd, Guido},
+  journal={Jezikoslovlje},
+  volume={19},
+  number={3},
+  pages={341--363},
+  year={2018}
+}
+
+@article{caha2019,
+  title={The fine structure of the comparative},
+  author={Caha, Pavel and De Clercq, Karen and Vanden Wyngaerd, Guido},
+  journal={Studia Linguistica},
+  volume={73},
+  number={3},
+  pages={470--521},
+  year={2019}
+}
+
+@article{franks2004,
+  title={Pronominal clitics in Slavic},
+  author={Franks, Steven and Junghanns, Uwe and Law, Paul},
+  journal={Journal of Slavic linguistics},
+  volume={12},
+  pages={3--36},
+  year={2004}
+}
+
+@article{picallo2008,
+  title={Gender and number in Romance},
+  author={Picallo, M Carme},
+  journal={Lingue e linguaggio},
+  volume={7},
+  number={1},
+  pages={47--66},
+  year={2008}
+}
+
+@article{kramer2016,
+  title={The location of gender features in the syntax},
+  author={Kramer, Ruth},
+  journal={Language and linguistics Compass},
+  volume={10},
+  number={11},
+  pages={661--677},
+  year={2016},
+  doi={10.1111/lnc3.12226}
+}
+
+@article{bittner1996,
+  title={The structural determination of case and agreement},
+  author={Bittner, Maria and Hale, Ken},
+  journal={Linguistic inquiry},
+  pages={1--68},
+  year={1996},
+  volume={27}
+}
+
+@article{baunaz2018,
+  title={Deconstructing categories syncretic with the nominal complementizer},
+  author={Baunaz, Lena and Lander, Eric},
+  journal={Glossa: a journal of general linguistics},
+  volume={3},
+  number={1},
+  pages={1--27},
+  year={2018},
+  doi={10.5334/gjgl.349}
+}
+
+@book{kayne1994,
+  title={The antisymmetry of syntax},
+  author={Kayne, Richard S},
+  year={1994},
+  publisher={MIT press},
+  location={Cambridge/London}
+}
+
+@incollection{hartmann1978,
+  title={Verschmelzungen als Varianten des bestimmten Artikels},
+  author={Hartmann, Dietrich},
+  booktitle={Sprache in Gegenwart und Geschichte. Festschrift für Heinrich Matthias Heinrichs},
+  pages={68--81},
+  year={1978},
+  editor={Hartmann, Dietrich and Linke, Hansjürgen and Ludwig, Otto},
+  publisher = {Böhlau},
+  address={Köln}
+}
+
+@article{emonds1979,
+  title={Appositive relatives have no properties},
+  author={Emonds, Joseph},
+  journal={Linguistic Inquiry},
+  pages={211--243},
+  year={1979},
+  volume={10}
+}
+
+@book{carlson1977,
+  title={Remarks on the syntax of Free Relative Clauses [Unpublished manuscript]},
+  author={Carlson, Lauri},
+  address={Linguistics and philosophy department, MIT},
+  year={1977}
+}
+
+@book{karlsson2013,
+  title={Finnish: An essential grammar},
+  author={Karlsson, Fred},
+  year={2013},
+  publisher={Routledge},
+  location={London/New York},
+  doi={10.4324/9780203008713}
+}
+
+@article{starke2017,
+  title={Resolving (DAT = ACC) ≠ GEN},
+  author={Starke, Michal},
+  year={2017},
+  doi={10.5334/gjgl.408},
+  journal={Glossa: a journal of general linguistics},
+  volume={2},
+  number={1}
+}
+
+@inproceedings{ingria1990,
+  title = {The Limits of Unification},
+  doi = {10.3115/981823.981848},
+  booktitle = {Proceedings of the 28th {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}}},
+  author = {Ingria, Robert},
+  year = {1990},
+  pages = {194--204}
+}
+
+@inproceedings{zaenen1984,
+  address = {Somerville, Massachusetts},
+  title = {Morphological Non-Distinctiveness and Coordination},
+  booktitle = {Proceedings of the {{First Eastern States Conference}} on {{Linguistics}}},
+  publisher = {{Cascadilla Press}},
+  author = {Zaenen, Annie and Karttunen, Lauri},
+  editor = {Alvarez, Gloria and Brodie, Belinda and McCoy, Terry},
+  year = {1984},
+  pages = {309--320}
+}
+
+@article{dyta1984,
+  title = {Across-the-Board Dependencies and Case in {{Polish}}},
+  volume = {15},
+  number = {4},
+  journal = {Linguistic inquiry},
+  author = {Dyta, Stefan},
+  year = {1984},
+  pages = {701--705}
+}
+
+@article{pullum1986,
+  title = {Phonological Resolution of Syntactic Feature Conflict},
+  volume = {62},
+  doi = {10.2307/415171},
+  journal = {Language},
+  author = {Pullum, Geoffrey and Zwicky, Arnold},
+  year = {1986},
+  pages = {751--773}
+}
+
+@article{dalrymple2000,
+  title = {Feature Indeterminacy and Feature Resolution},
+  volume = {76},
+  doi = {10.2307/417199},
+  number = {4},
+  journal = {Language},
+  author = {Dalrymple, Mary and Kaplan, Ronald M.},
+  year = {2000},
+  pages = {759--798}
+}
+
+@inproceedings{sag2003,
+  address = {Stanford},
+  title = {Coordination and Underspecification},
+  booktitle = {Proceedings of the 9th {{HPSG}} Conference},
+  publisher = {{Stanford University}},
+  author = {Sag, Ivan A},
+  year = {2003},
+  pages = {267--291}
+}
+
+@phdthesis{caponigro2003,
+  title={Free not to ask: On the semantics of free relatives and wh-words cross-linguistically},
+  author={Caponigro, Ivano},
+  year={2003},
+  location={Los Angeles},
+  school={University of California}
+}
+
+@article{baunaz2018a,
+  title={Syncretisms with the nominal complementizer},
+  author={Baunaz, Lena and Lander, Eric},
+  journal={Studia Linguistica},
+  volume={72},
+  number={3},
+  pages={537--570},
+  year={2018},
+  doi={10.1111/stul.12076}
+}
+
+@article{weiss2016,
+  title={So welih wîb so wari: Zur Genese freier w-Relativsätze im Deutschen},
+  author={Weiß, Helmut},
+  editor={Neri, Sergio and Schuhmann, Roland and Zeilfelder, Susanne},
+  booktitle={"dat ih dir it nu bi huldi gibu": Linguistische, germanistische und indogermanistische Studien. Rosemarie Lühr gewidmet},
+  pages={505--515},
+  year={2016},
+  location={Wiesbaden},
+  publisher={Dr. Ludwig Reichert Verlag}
+}
+
+@incollection{vogel2001,
+  location = {Berlin},
+  title = {Case Conflict in German Free Relative Constructions: {{An}} Optimality Theoretic Treatment},
+  booktitle = {Competition in Syntax},
+  publisher = {{Mouton de Gruyter}},
+  author = {Vogel, Ralf},
+  editor = {Müller, Gereon and Sternefeld, Wolfgang},
+  year = {2001},
+  pages = {341--375},
+  doi = {10.1515/9783110829068.341}
+}
+
+@incollection{wyngaerd2018,
+  location = {Oxford},
+  title = {The Feature Structure of Pronouns: A Probe Into Multidimensional Paradigms},
+  booktitle = {Exploring Nanosyntax},
+  publisher = {Oxford University Press},
+  author = {Wyngaerd, Guido Vanden},
+  editor = {Baunaz, Lena and De Clercq, Karen and Haegeman, Liliane and Lander, Eric},
+  year = {2018},
+  pages = {277--304},
+  doi = {10.1093/oso/9780190876746.003.0011}
+}
+
+@article{sanfelici2021,
+  title={Relative clauses in the diachrony of Italian},
+  author={Sanfelici, Emanuela and Poletto, Cecilia},
+  journal={Journal of Historical Syntax},
+  volume={5},
+  pages={1--32},
+  year={2021},
+  doi = {10.18148/hs/2021.v5i1-13.32}
 }
